<resources>
    <string name="app_name">Szybkie Zakupki!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="enter_your_email">Wpisz swoj email</string>
    <string name="enter_your_pass">Wpisz swoje haslo</string>
    <string name="retype_your_pass">Wpisz ponownie swoje haslo</string>
    <string name="not_registered">Nie posiadasz konta?</string>
    <string name="register"><u>Zarejestruj sie!</u></string>
    <string name="alredy_register">Masz juz konto?</string>
    <string name="login"><u>Zaloguj sie</u></string>
    <string name="dodaj_produkt">Wpisz nazwe produktu</string>
    <string name="shop_name">Podaj nazwę sklepu</string>
    <string name="shop_address">Podaj adres sklepu</string>
    <string name="client_name">Podaj Imie</string>
    <string name="client_surname">Podaj Nazwisko</string>


</resources>